smothering & delay pt 3

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     })
   </script>
 
-  <a-scene mindar-image="imageTargetSrc: ./src/images/targets.mind; filterMinCF:0.00001; filterBeta: 10" color-space="sRGB"
+  <a-scene mindar-image="imageTargetSrc: ./src/images/targets.mind; filterMinCF:0.000001; filterBeta: 1" color-space="sRGB"
     renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false"
     device-orientation-permission-ui="enabled: false">
     <a-assets>
@@ -55,7 +55,7 @@
       <!--     amazonaochrocephala -->
 
       <video id="amazonaochrocephala" src="./src/videos/Amazona ochrocephala.mp4" preload autoplay loop muted></video>
-      <video id="amazonaochrocephala-sound" src="./src/videos/Amazona ochrocephala.mp4" preload loop></video> -->
+      <video id="amazonaochrocephala-sound" src="./src/videos/Amazona ochrocephala.mp4" preload loop></video> 
 
       <!--     euphonialaniir-->
     </a-assets>
