--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     })
   </script>
 
-  <a-scene mindar-image="imageTargetSrc: ./src/images/targets.mind; filterMinCF:0.000001; filterBeta: 1" color-space="sRGB"
+  <a-scene mindar-image="imageTargetSrc: ./src/images/targets.mind; filterMinCF:0.000001; filterBeta: 0.5" color-space="sRGB"
     renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false"
     device-orientation-permission-ui="enabled: false">
     <a-assets>
@@ -72,7 +72,7 @@
       <a-plane id="euphonialaniir-plane" material="
         shader: chromakey; 
         src: #euphonialaniir; 
-        color: 0.1 0.9 0.2" position="0 0 -1" scale="1.3 1.3 1.3" rotation="0 0 0"></a-plane>
+        color: 0.1 0.9 0.2" position="0.2 0.005 -1" scale="1.3 1.3 1.3" rotation="0 0 0"></a-plane>
     </a-entity>
 
     <!--     Myiozetetes Cayanensis-->
@@ -84,7 +84,7 @@
       <a-plane id="myiozetetescayanensis-plane" material="
         shader: chromakey; 
         src: #myiozetetescayanensis; 
-        color: 0.0 0.2 1.0" position="0 0 -1" scale="1.3 1.3 1.3" rotation="0 0 0"></a-plane>
+        color: 0.0 0.2 1.0" position="0.5 0 -1" scale="1.3 1.3 1.3" rotation="0 0 0"></a-plane>
     </a-entity>
 
     <!--     pitangusnsulphuratus -->
@@ -96,12 +96,15 @@
       <a-plane id="pitangusnsulphuratus-plane" material="
         shader: chromakey; 
         src: #pitangusnsulphuratus; 
-        color: 0.1 0.9 0." position="0 0 -1" scale="1.3 1.3 1.3" rotation="0 0 0"></a-plane>
+        color: 0.1 0.9 0." position="0.1 -0.1 -1" scale="1.3 1.3 1.3" rotation="0 0 0"></a-plane>
     </a-entity>
 
-    <!--     amazonaochrocephala -->
 
-    <a-entity mindar-image-target="targetIndex: 3" id="amazonaochrocephala-vid" amazonaochrocephala-vid>
+    <!--     troglodytesaedon -->
+
+<!-- 
+    
+    <a-entity mindar-image-target="targetIndex: 4" id="amazonaochrocephala-vid" amazonaochrocephala-vid>
       <a-video src="#amazonaochrocephala-sound" position="0 0 0.2" rotation="0 0 0" width="0.0" height="0.0">
       </a-video>
 
@@ -109,6 +112,18 @@
         shader: chromakey; 
         src: #amazonaochrocephala; 
         color: 1.0 0.0 0.1" position="0 0 -1" scale="1.3 1.3 1.3" rotation="0 0 0"></a-plane>
+    </a-entity> -->
+
+
+    <!--     amazonaochrocephala -->
+    <a-entity mindar-image-target="targetIndex: 5" id="amazonaochrocephala-vid" amazonaochrocephala-vid>
+      <a-video src="#amazonaochrocephala-sound" position="0 0 0.2" rotation="0 0 0" width="0.0" height="0.0">
+      </a-video>
+
+      <a-plane id="amazonaochrocephala-plane" material="
+        shader: chromakey; 
+        src: #amazonaochrocephala; 
+        color: 1.0 0.0 0.1" position="0.65 0 -1" scale="1.3 1.3 1.3" rotation="0 0 0"></a-plane>
     </a-entity>
   </a-scene>
 </body>
